Lift bottom overlay to fix hidden UI on mobile

--- a/src/style.css
+++ b/src/style.css
@@ -90,11 +90,12 @@ select {
 }
 
 .bottom-overlay {
-  bottom: 0;
+  bottom: 20px;
   flex-direction: column;
   align-items: stretch;
-  background: linear-gradient(0deg, rgba(0,0,0,0.8) 0%, rgba(0,0,0,0) 100%);
-  padding-bottom: 1.5rem;
+  background: linear-gradient(0deg, rgba(0,0,0,0.9) 0%, rgba(0,0,0,0) 100%);
+  padding: 1.25rem;
+  padding-bottom: 40px;
 }
 
 .bottom-actions {
